add the google adsense feature

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet"> -->
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+      data-ad-client="ca-pub-4897128497430688" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="/richtexteditor/rte.js"></script>  
     <script type="text/javascript" src='/richtexteditor/plugins/all_plugins.js'></script> 
     <script src="/assets/js/quill/quill.min.js"></script>
