--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.webp" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/richtexteditor/rte_theme_default.css" />
-    
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/png" href="/logo.webp"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<!--    <link rel="stylesheet" href="/richtexteditor/rte_theme_default.css"/>-->
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -17,17 +17,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet"> -->
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-      data-ad-client="ca-pub-4897128497430688" crossorigin="anonymous"></script>
+    <!--    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"-->
+    <!--      data-ad-client="ca-pub-4897128497430688" crossorigin="anonymous"></script>-->
 
-    <script type="text/javascript" src="/richtexteditor/rte.js"></script>  
-    <script type="text/javascript" src='/richtexteditor/plugins/all_plugins.js'></script> 
-    <script src="/assets/js/quill/quill.min.js"></script>
-    <link href="/assets/js/quill/quill.snow.css" rel="stylesheet">
-     <title>Tariff Social</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <title>Tariff Social</title>
+    <link href="/src/styles/main.css" rel="stylesheet">
+    <link href="//cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet">
+</head>
+
+
+<body>
+<div id="root"></div>
+<script src="//cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js" defer></script>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
