display the upload progress in the creatpost

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/png" href="/logo.webp"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<!--    <link rel="stylesheet" href="/richtexteditor/rte_theme_default.css"/>-->
-
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="/richtexteditor/rte_theme_default.css"/>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
@@ -23,6 +21,8 @@
     <title>Tariff Social</title>
     <link href="/src/styles/main.css" rel="stylesheet">
     <link href="//cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet">
+    <script src="/richtexteditor/rte.js"></script>
+    <script src="/richtexteditor/plugins/all_plugins.js"></script>
 </head>
 
 
